--- a/docs/templates/documentation.j2.html
+++ b/docs/templates/documentation.j2.html
@@ -2,7 +2,7 @@
 
 {% block tabs %}
 	<a class="tab" href={{ absolute("/quickstart") }}>Quickstart</a>
-    <a class="tab" href={{ absolute("/docs/") }}>Documentation</a>
+    <a class="tab-selected" href={{ absolute("/docs/") }}>Documentation</a>
     <a class="tab" href={{ absolute("/about") }}>About</a>
 {% endblock %}
 
