--- a/docs/templates/quickstart.j2.html
+++ b/docs/templates/quickstart.j2.html
@@ -1,7 +1,7 @@
 {% extends 'base.j2.html' %}
 
 {% block tabs %}
-	<a class="tab" href={{ absolute("/quickstart") }}>Quickstart</a>
+	<a class="tab-selected" href={{ absolute("/quickstart") }}>Quickstart</a>
     <a class="tab" href={{ absolute("/docs/") }}>Documentation</a>
     <a class="tab" href={{ absolute("/about") }}>About</a>
 {% endblock %}
