--- a/docs/templates/about.j2.html
+++ b/docs/templates/about.j2.html
@@ -3,7 +3,7 @@
 {% block tabs %}
 	<a class="tab" href={{ absolute("/quickstart") }}>Quickstart</a>
     <a class="tab" href={{ absolute("/docs/") }}>Documentation</a>
-    <a class="tab" href={{ absolute("/about") }}>About</a>
+    <a class="tab-selected" href={{ absolute("/about") }}>About</a>
 {% endblock %}
 
 {% block body %}
